# boids

./: CMakeLists.txt  IDENTIFICATION.txt  README.md  README.txt  demo  flock.cpp  flock.h  from_slides.cpp  gl_math.cpp  gl_math.h  presentation.url  shader.cpp  shader.hpp  window.cpp
res/shaders/: Basic.shader  fragment.shader  vertex.shader
src/: flock.cpp  flock.h  gl_math.h  main.cpp  shader.cpp  shader.h  utils.cpp  utils.h
